add looping to carousel

--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>jQuery Carousel</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="">
+  <meta charset="UTF-8">
+  <title>jQuery Carousel</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrapper">
+  
+  <div class="wrapper">
 
-		<div id="frame">
-			<div id="tray">
+    <div id="frame">
+      <div id="tray">
+        
+        <div class="slide">
+          <h2>Intro Text</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis repellat nostrum possimus, impedit saepe nihil quasi, molestias doloribus eius error sapiente beatae dicta sunt provident quibusdam velit sequi, recusandae rem?</p>
+        </div>
 
+        <div class="slide">
+          <img src="http://fillmurray.com/800/600" alt="Bill">
+        </div>
 
-				<div class="slide">
-					<h2>Intro Text</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente rerum, velit possimus, excepturi eaque temporibus eum ullam deserunt quasi illum, rem repellat, animi ea labore assumenda! Placeat, qui inventore quia?</p>
-				</div>
+        <div class="slide">
+          <iframe width="800" height="600" src="https://www.youtube.com/embed/FfzIRgpbXPM" frameborder="0" allowfullscreen></iframe>
+        </div>
 
-				<div class="slide">
-					<img src="http://fillmurray.com/800/600" alt="Bill">
-				</div>
-				
-				<div class="slide">
-   					<iframe width="800" height="600" src="https://www.youtube.com/embed/FfzIRgpbXPM" frameborder="0" allowfullscreen></iframe>
-        		</div>
+        <div class="slide">
+        	<h2>The End</h2>
+        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dolorum dolores itaque consectetur nemo delectus veritatis et tempora possimus natus neque iure facilis, iusto vitae omnis fuga aliquam blanditiis adipisci?</p>
+        </div>
 
+      </div><!-- #tray -->
 
+      <a id="prev" href="#">prev</a>
+      <a id="next" href="#">next</a>
 
+    </div><!-- #frame -->
 
-			</div> <!-- #tray -->
-
-			<a id="prev" href="#">prev</a>
-			<a id="next" href="#">next</a>
-		</div><!-- #frame -->
-	</div> <!-- #wrapper -->
-
-
-
-
+  </div><!-- #wrapper -->
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/carousel.js"></script>
 </body>
 </html>
